[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiproxyguard-python-sdk"
version = "0.1.0"
description = "Official Python SDK for AIProxyGuard - LLM security proxy for prompt injection detection"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "AINVIRION", email = "support@ainvirion.com" }
]
keywords = [
    "llm",
    "security",
    "prompt-injection",
    "ai-safety",
    "guardrails",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://aiproxyguard.com"
Documentation = "https://ainvirion.github.io/aiproxyguard/"
Repository = "https://github.com/AInvirion/aiproxyguard-python-sdk"
Issues = "https://github.com/AInvirion/aiproxyguard-python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aiproxyguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src/aiproxyguard --cov-report=term-missing"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true
